doc/_ext/theme/styles/layout/_header.scss
#header {
    width: 100%;
    position: sticky;
    z-index: var(--z-index-sticky);
    top: 0;

    @media (max-width: 768px) {
        padding: 0 0.5rem;
    }

    .header__container {
        width: 100%;
        display: flex;
        height: 3.75rem;
        max-width: 28rem;
        align-items: center;
        border-radius: 2rem;
        margin: 1.5rem auto;
        padding: 0 1.75rem;
        box-shadow: inset 0.5px 0.5px 0px rgba(0, 0, 0, 0.05),
                    inset -0.5px -0.5px 0px rgba(0, 0, 0, 0.05);
        backdrop-filter: url(#liquid-glass-header) blur(4px);
        background: rgba(237, 237, 237, 0.5);

        &--fullwidth {
            margin: 0;
            height: 6rem;
            max-width: 100%;
            padding: 0 3rem;
            border-radius: 0;
            box-shadow: none;
            background: #ffffff;
            backdrop-filter: none;
            
            .container__desktop-menu {
                display: grid !important;
                grid-template-columns: 1fr 1fr 1fr;
            }
        }

        .container__desktop-menu {
            width: 100%;
            display: none;
            justify-content: space-between;
    
            @media (min-width: 768px) {
                display: flex;
            }
            
            .desktop-menu__logo {
                display: flex;
                align-items: center;
                margin-left: -0.25rem;
                justify-self: start;
            }

            .desktop-menu__searchbar {
                background: #f2f2f3;
                transition: all 0.15s cubic-bezier(0, 0, 0.2, 1);
                justify-self: center;
                border-radius: 2rem;
                position: relative;
                height: 3.25rem;
                cursor: pointer;
                display: flex;
                width: 100%;

                &:hover {
                    background: #ececee;
                }

                input {
                    width: 100%;
                    height: 100%;
                    border: none;
                    outline: none;
                    padding: 0 3rem;
                    font-size: 1rem;
                    background: transparent;

                    &::placeholder {
                        color: rgb(173, 173, 173);
                        -webkit-text-size-adjust: 100%;
                        font-feature-settings: normal;
                        -webkit-tap-highlight-color: transparent;
                        font-family: ui-sans-serif, -apple-system,
                            system-ui, Segoe UI, Helvetica,
                            Apple Color Emoji, Arial, sans-serif,
                            Segoe UI Emoji, Segoe UI Symbol;
                        font-feature-settings: normal;
                        font-variation-settings: normal;
                        font-weight: 350;
                    }
                }
                
                i {
                    top: 50%;
                    left: 1rem;
                    font-size: 1.25rem;
                    position: absolute;
                    transform: translateY(-50%);
                    pointer-events: none;
                }
            }
    
            .desktop-menu__navigation {
                margin-right: -1.188rem;
                align-items: center;
                position: relative;
                justify-self: end;
                display: flex;
                gap: 0.5rem;

                &--show-hidden {                    
                    .navigation__link {
                        &:nth-last-child(2) {
                            margin-right: calc(8rem + 0.5rem) !important;
                        }

                        &:last-child {
                            transform: translateY(0) !important;
                            pointer-events: auto !important;
                            opacity: 1 !important;
                        }
                    }
                }
    
                .navigation__link {
                    transition: margin 0.25s cubic-bezier(0,0,.2,1), 
                                transform 0.15s cubic-bezier(0,0,.2,1),
                                opacity 0.15s cubic-bezier(0,0,.2,1);
                    padding: 0.75rem 1rem;
                    line-height: 1.25rem;
                    border-radius: 2rem;
                    position: relative;
                    font-weight: 500;
                    text-wrap: nowrap;
                    cursor: pointer;
                    display: flex;

                    &:first-child {
                        margin-right: -0.5rem;
                    }

                    &:nth-last-child(2) {
                        margin-right: 0;
                    }

                    &:last-child {
                        background: rgb(20, 20, 20);
                        transform: translateY(0.5rem);
                        box-shadow: inset 0.5px 0.5px 1px rgba(255, 255, 255, 0.5),
                                    inset -0.5px -0.5px 1px rgba(255, 255, 255, 0.5);
                        pointer-events: none;
                        position: absolute;
                        font-weight: 400;
                        color: #ffffff;
                        width: 8rem;
                        opacity: 0;
                        right: 0;
                    }
                }
            }
        }
    
        .container__mobile-menu {
            width: 100%;
            display: flex;
            align-items: center;
            justify-content: space-between;

            @media (min-width: 768px) {
                display: none;
            }

            .mobile-menu__logo {
                display: flex;
                align-items: center;
                margin-left: -0.25rem;
                justify-self: start;
            }
    
            .mobile-menu__button {            
                display: flex;
                width: 3.5rem;
                height: 3.5rem;
                font-size: 0.75rem;
                border-radius: 50%;
                align-items: center;
                margin-right: -1.25rem;
                justify-content: center;
                background: transparent;
            }
        }
    }
}

